<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="content_filename">filename</string>
    <string name="status">downloadingStatus</string>
    <string name="notificationcontent">Downloading Application Notification</string>
    <string name="statusread">Read Status</string>
    <string name="download">START DOWNLOAD</string>
    <string name="notificationchannelname">Loading</string>
    <string name="typefacefamily">TypeFaceFamily</string>
    <string name="glide">Glide:Image Download </string>
    <string name="retrofit">Retrofit:Square</string>
    <string name="load">Udacity:The Programmer</string>
    <string name="customurl">Enter The Custom Url</string>
    <string name="header">Welcome To Load App</string>
    <string name="customurltext">The Custom Url is DownLoaded</string>
    <string name="invalidurl">Url is not Vaild</string>
    <string name="success">Success</string>
    <string name="failed"> Failed</string>
    <string name="glideUrl">https://github.com/bumptech/glide</string>
    <string name="loadurl">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofiturl">https://github.com/square/retrofit</string>
    <string name="select">Choose One Option</string>
    <string name="sendcustomurl">Enable Custom URL</string>
    <string name="loadfile">load the file</string>
    <string name="name_of_file">File  Name</string>
    <string name="statusTitle">Status</string>
    <string name="confirm">Confirm</string>
    <string name="nointernetconnection">No Internet Connection!!!</string>
    <string name="fileName"> FileName</string>
    <string name="detailsactivityname">Downloading Details</string>
</resources>
