<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="@dimen/dimen30"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/customurl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/customurl"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:ellipsize="start"

        android:layout_marginTop="@dimen/dimen20"
        android:layout_height="wrap_content"
        android:hint="@string/customurl"
        android:inputType="text"
        android:textAllCaps="true"
        android:textSize="@dimen/dimen25"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonenable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonenable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sendcustomurl"
        android:textSize="@dimen/dimen20"
        app:layout_constraintBottom_toTopOf="@+id/radiobuttons"
        app:layout_constraintEnd_toEndOf="parent">

    </Button>

    <RadioGroup
        android:id="@+id/radiobuttons"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:layout_marginTop="@dimen/dimen50"
        android:autofillHints="Enter"
        app:layout_constraintBottom_toTopOf="@+id/custombutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide"
            android:layout_marginTop="15dp"
            android:textColor="#050505"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/load"
            android:textColor="#050505"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/retrofit"
            android:textColor="#050505"
            android:textSize="20sp" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custombutton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen50"
        android:clickable="false"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dimen30"
        android:layout_marginBottom="@dimen/dimen30"
        app:layout_constraintStart_toStartOf="parent"
        app:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>